<resources>
    <string name="app_name">Groceree</string>
    <string name="login_hint">Login to your account</string>
    <string name="enter_phone_hint">Enter phone number</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="ask_for_signup">Don\'t have an account? Signup</string>
    <string name="signup_hint">Create your new account</string>
    <string name="enter_fullname">Enter full name</string>
    <string name="enter_fullname_hint">Enter Full Name</string>
    <string name="enter_pincode_hint">Enter pin code</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="reenter_password_hint">Re enter your password</string>
    <string name="ask_for_signin">Already have an account? Signin</string>
    <string name="enter_otp_hint">Enter OTP</string>


    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggest_enter_otp_to_complete">Enter OTP to complete registration</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="enter_address_hint">Enter your address</string>


</resources>