<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".view.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:gravity="center_horizontal"

            />

        <TextView
            android:id="@+id/tv_login_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_hint"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            />


        <EditText
            android:id="@+id/et_confirmOTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_otp_hint"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_30sdp"
            android:visibility="gone"

            />

        <Button
            android:id="@+id/btnConfirmUserRegistrationWithOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            android:text="confirm"/>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/entryFieldLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/enter_fullname_hint"
            />

        <EditText
            android:id="@+id/et_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/enter_pincode_hint"
            />


        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="Enter DOB"
            />

        <EditText
            android:id="@+id/et_signup_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/enter_phone_hint"
            />

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/enter_password_hint"
            />

        <EditText
            android:id="@+id/et_signup_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/reenter_password_hint"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">



    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="Signup"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_ask_for_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ask_for_signin"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />



</LinearLayout>